--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Northcoders - React Starter (browser)</title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css"/>
     <script src="vendor/react.min.js"></script>
     <script src="vendor/react-dom.min.js"></script>
     <script src="vendor/babel.min.js"></script>
