audio playing and looping - imperial march while on the page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 </style>
 <body>
     <div id="app"></div>
+    <audio src="./sound/imperial.wav" autoplay loop='true'>
+      <p>If you are reading this, it is because your browser does not support the audio element.     </p>
+      <embed src="./sound/imperial.wav" width="180" height="90" hidden="true" />
+    </audio>
     <script type="text/babel" src="app.jsx" data-presets="es2015,react"></script>
 </body>
 </html>
